Auto commit from script